force-app/main/default/objects/No_Charge_Marketing_Order__c/No_Charge_Marketing_Order__c.object-meta.xml
<CustomObject>
    <description>Approval and tracking process for marketing no charge marketing orders.</description>
    <label>No Charge Marketing Order</label>
    <nameField>
        <displayFormat>NCMO-{0000}</displayFormat>
        <label>NCMO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>No Charge Marketing Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>