force-app/main/default/objects/No_Charge_Marketing_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account under which No Charge Marketing Order will be ordered.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>No Charge Marketing Orders</relationshipLabel>
    <relationshipName>No_Charge_Marketing_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>