force-app/main/default/objects/No_Charge_Marketing_Order__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <description>Budget number No Charge Marketing Order will be charged to.</description>
    <formula>Owner:User.Cost_Center__c</formula>
    <label>Cost Center</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>