force-app/main/default/objects/No_Charge_Marketing_Order__c/fields/NCMO_Justification__c.field-meta.xml
<CustomField>
    <fullName>NCMO_Justification__c</fullName>
    <description>For compliance purposes, user can provide a 2-3 line justification.</description>
    <label>NCMO Justification</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>