force-app/main/default/objects/No_Charge_Marketing_Order__c/fields/NCMO_Reason__c.field-meta.xml
<CustomField>
    <fullName>NCMO_Reason__c</fullName>
    <description>Code that NCMO should fall under.</description>
    <label>NCMO Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Data</fullName>
            </value>
            <value>
                <fullName>Research Grant: HCP</fullName>
            </value>
            <value>
                <fullName>Research Grant: Non-HCP Human Health Related</fullName>
            </value>
            <value>
                <fullName>Research Grant: Non-HCP Not Human Health Related</fullName>
            </value>
            <value>
                <fullName>Research Collaboration: HCP</fullName>
            </value>
            <value>
                <fullName>Research Collaboration: Non-HCP Human Health Related</fullName>
            </value>
            <value>
                <fullName>Research Collaboration: Non-HCP Not Human Health Related</fullName>
            </value>
            <value>
                <fullName>Illumina Initiated Research</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Donations</fullName>
            </value>
            <value>
                <fullName>Research Contest</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Other: Legal Review Required</fullName>
            </value>
            <value>
                <fullName>MAB: Marketing Array Collaborations</fullName>
                <isActive>false</isActive>
                <label>MAB: Marketing Array Collaborations</label>
            </value>
            <value>
                <fullName>MAP: Marketing Array Promotions</fullName>
                <isActive>false</isActive>
                <label>MAP: Marketing Array Promotions</label>
            </value>
            <value>
                <fullName>MAR: Marketing Array Replacement</fullName>
                <isActive>false</isActive>
                <label>MAR: Marketing Array Replacement</label>
            </value>
            <value>
                <fullName>MDC: Marketing Diagnostic Collaborations</fullName>
                <isActive>false</isActive>
                <label>MDC: Marketing Diagnostic Collaborations</label>
            </value>
            <value>
                <fullName>MDP: Marketing Diagnostic Promotions</fullName>
                <isActive>false</isActive>
                <label>MDP: Marketing Diagnostic Promotions</label>
            </value>
            <value>
                <fullName>MDR: Marketing Diagnostic Replacement</fullName>
                <isActive>false</isActive>
                <label>MDR: Marketing Diagnostic Replacement</label>
            </value>
            <value>
                <fullName>MSB: Marketing Sequencing Collaborations</fullName>
                <isActive>false</isActive>
                <label>MSB: Marketing Sequencing Collaborations</label>
            </value>
            <value>
                <fullName>MSP: Marketing Sequencing Promotions</fullName>
                <isActive>false</isActive>
                <label>MSP: Marketing Sequencing Promotions</label>
            </value>
            <value>
                <fullName>MSR: Marketing Sequencing Replacement</fullName>
                <isActive>false</isActive>
                <label>MSR: Marketing Sequencing Replacement</label>
            </value>
            <value>
                <fullName>OSA: Other Sequencing Adjustment</fullName>
                <isActive>false</isActive>
                <label>OSA: Other Sequencing Adjustment</label>
            </value>
            <value>
                <fullName>QAR: Quality Array Replacement</fullName>
                <isActive>false</isActive>
                <label>QAR: Quality Array Replacement</label>
            </value>
            <value>
                <fullName>QDR: Quality Diagnostic Replacement</fullName>
                <isActive>false</isActive>
                <label>QDR: Quality Diagnostic Replacement</label>
            </value>
            <value>
                <fullName>QSR: Quality Sequencing Replacement</fullName>
                <isActive>false</isActive>
                <label>QSR: Quality Sequencing Replacement</label>
            </value>
            <value>
                <fullName>RAB: R&amp;D Array Beta</fullName>
                <isActive>false</isActive>
                <label>RAB: R&amp;D Array Beta</label>
            </value>
            <value>
                <fullName>RAC :  R&amp;D Array Collaboration</fullName>
                <isActive>false</isActive>
                <label>RAC :  R&amp;D Array Collaboration</label>
            </value>
            <value>
                <fullName>RDB: R&amp;D Diagnostic Beta</fullName>
                <isActive>false</isActive>
                <label>RDB: R&amp;D Diagnostic Beta</label>
            </value>
            <value>
                <fullName>RSB: R&amp;D Sequencing Beta</fullName>
                <isActive>false</isActive>
                <label>RSB: R&amp;D Sequencing Beta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>