force-app/main/default/objects/No_Charge_Marketing_Order__c/fields/Open_Offer_Short_Term_Proj_Justification__c.field-meta.xml
<CustomField>
    <fullName>Open_Offer_Short_Term_Proj_Justification__c</fullName>
    <description>For user to provide justification for Open Offer Short-Term Projects.</description>
    <inlineHelpText>Please answer each of the short-term project questions shown above before submitting for approval.</inlineHelpText>
    <label>Open Offer Short-Term Proj Justification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>