force-app/main/default/objects/No_Charge_Marketing_Order__c/validationRules/Acknowledgement_of_NCMO_Type_Usage.validationRule-meta.xml
<ValidationRule>
    <fullName>Acknowledgement_of_NCMO_Type_Usage</fullName>
    <active>true</active>
    <description>Users submitting NCMOs must check the checkbox that they acknowledge the NCMO Type usage</description>
    <errorConditionFormula>Acknowledgement_of_NCMO_Type_Usage__c = False</errorConditionFormula>
    <errorMessage>Users submitting NCMOs must check the checkbox that they acknowledge the NCMO Type usage</errorMessage>
</ValidationRule>