force-app/main/default/objects/No_Charge_Marketing_Order__c/validationRules/User_Change_NCMO_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Change_NCMO_Type</fullName>
    <active>true</active>
    <description>Users cannot change the NCMO Type value once NCMO is created.</description>
    <errorConditionFormula>ISCHANGED(NCMO_Reason__c)</errorConditionFormula>
    <errorDisplayField>NCMO_Reason__c</errorDisplayField>
    <errorMessage>Users cannot change the NCMO Type value once the NCMO record is created.</errorMessage>
</ValidationRule>